[package]
name = "google-takeout-saved-places-to-geojson"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
csv = "1.1.5"
env_logger = "0.8.2"
geojson = "0.21.0"
log = "0.4.13"
reqwest = { version = "0.11.0", features = ['blocking', 'json'] }
serde = { version = "1.0.119", features = ['derive'] }
serde_json = "1.0.61"
url = { version = "2.2.0", features = ['serde'] }
